fixed the whitelabel createaccount and search input designs

--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -20,7 +20,7 @@
                     <p class="text-muted mv-0 toggle-none">Welcome White Label Partner</p>
                 </div>
                 <ul class="metisMenu nav flex-column" id="menu">
-                 <input type="text"   onkeyup="Search()" id="search"placeholder="Search" style="width:90%;margin-left:5%;background-color:whtie;" class="nav-link    form-control " name="search-box" >
+                 <input type="text"   onkeyup="Search()" id="search"placeholder="Search" style="width:90%;margin-left:5%;background-color:#131C23;" class="nav-link    form-control " name="search-box" >
                     <li class="nav-item"><a href="/dashboard" class="nav-link">Go Back To Main Portal</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link">Dashboard</a>
                     </li>
