fixed the whitelabel createaccount and search input designs

--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -3,16 +3,16 @@
 {% block extrastyle %}
 <style>
 .form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-            color: black;
+            color: white;
             opacity: 1; /* Firefox */
 }
 
 .form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
-            color: black;
+            color: white;
 }
 
 .form-control::-ms-input-placeholder { /* Microsoft Edge */
-            color: black;
+            color: white;
  }
  .form-control {
      width:90%;
