fixed the whitelabel createaccount and search input designs

--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -40,7 +40,7 @@
                         {% endif %}
 
                        
-                        <input type="text"   onkeyup="Search()" id="search"placeholder="Search" style="width:90%;margin-left:5%;background-color:#131C23;" class="nav-link    form-control " name="search-box" >
+                        <input type="text"   onkeyup="Search()" id="search"placeholder="Search" style="width:90%;margin-left:5%;background-color:#131C23;color:white;" class="nav-link    form-control " name="search-box" >
               
                         <li class="nav-item">
                             {% if request.resolver_match.app_name == 'business' %}
