--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -34,6 +34,7 @@
                        <li class="nav-item"><a href="{% url "whitelabelpartnerportal:clients-on-wholesale" %}" class="nav-link">Clients That Are On Your Wholesale Package</a></li>
                        <li class="nav-item"><a href="{% url "whitelabelpartnerportal:partner_resources" %}" class="nav-link">Partner Resources</a></li>
 <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:create_account' %}" class="nav-link">Create Accounts for your users</a></li>
+<li class="nav-item"><a href="{% url 'whitelabelpartnerportal:clients-created-by-you' %}" class="nav-link">Accounts Created By You</a></li>
                     <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:marketingroi' %}" class="nav-link">Your
                        Marketing Return On Investment</a></li>
 
