--- a/whitelabelpartnerportal/templates/PortalManagement/AccountsCreatedByYou.html
+++ b/whitelabelpartnerportal/templates/PortalManagement/AccountsCreatedByYou.html
@@ -3,22 +3,24 @@
 {% block content %}
  <div class="row page-header">
         <div class="col-lg-6 align-self-center ">
-            <h2>Showing the clients created by {{user.email}}</h2></div>
+            <h2>Showing The Clients Created By {{user.email}}</h2></div>
     </div>
     <section class="main-content">
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-default">
+                    Clients
                     </div>
-                    <div class="table-responsive">
+                    <div class="card-body">
                         <table id="datatable" class="table">
                             <thead>
                             <tr>
                             <th>No.</th>
                             <th>First Name</th>
                             <th>Last Name</th>
-                            <th>email</th>
+                            <th>Email</th>
+                            <th>Phone Number</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -26,8 +28,9 @@
                                 <tr>
                                     <td>{{ forloop.counter0 }}</td>
                                     <td>{{ client.user.first_name }} </td>
-                                    <td>{{ client.user.last_name }}</td>
+                                                    <td>{{ client.user.last_name }}</td>
                                     <td>{{client.user.email}}</td>
+                                    <td>{{client.phone_number}}</td>
 
                                 </tr>
                             {% endfor %}
