--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -126,6 +126,8 @@
                         For Merchant Account</a></li>
                   <!--  <li class="nav-item"><a href="https://apps.apple.com/us/app/white-label-partner-gdt/id1530824382"
                                             target="_blank" class="nav-link">Download Partner App For Iphone</a></li> -->
+                  <li class="nav-item"><a href="https://creator.us.uneeq.io/try/81163bf3-cb93-4032-a18b-67ef02cdad33"
+                    target="_blank" class="nav-link">Your AI Customer Success Agent</a></li>
                     <li class="nav-item"><a
                             href="https://play.google.com/store/apps/details?id=com.millenialbusiness.whitelabel"
                             target="_blank" class="nav-link">Download Partner App For Android</a></li>
@@ -140,7 +142,7 @@
     </div>
      <script>
     function Search() {
-   
+
 var input,filter,ul,li,a,i,txtValue;
 input = document.getElementById("search");
 filter = input.value.toUpperCase();
