--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -371,13 +371,13 @@
                         {% endif %}
                     {% endif %} -->
 
-                    {% if dynamic.is_main_site %}
+                <!--    {% if dynamic.is_main_site %}
                             <li class="nav-item">
                                 <a href="https://kleui1.leaddyno.com/" target="_blank" class="nav-link"> Make Extra
                                     Money
                                     Referring Friends! </a>
                             </li>
-                    {% endif %}
+                    {% endif %} -->
 
                         {% if dynamic.show_affiliate %}
                             <li class="nav-item">
