--- a/getdinerotoday/templates/layout/BaseLayout.html
+++ b/getdinerotoday/templates/layout/BaseLayout.html
@@ -6,7 +6,7 @@
     {% include "components/StylesBlock.html" %}
     {% block extrastyle %}
     {% endblock extrastyle %}
-</head>
+</head
 <body class=''>
 {% include "components/TopBar.html" %}
 
