--- a/getdinerotoday/templates/components/StylesBlock.html
+++ b/getdinerotoday/templates/components/StylesBlock.html
@@ -15,10 +15,10 @@
 <link rel="stylesheet" type="text/css" href='{% static "lib/toast/jquery.toast.min.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "style.css" %}'>
 <link rel="stylesheet" type="text/css" href='{% static "lib/jquery-ui/jquery-ui.css" %}'>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
 <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
 <script src="{% static "js/x-frame-bypass.js" %}" type="module"></script>
+© 2021 GitHub, Inc.
