--- a/bcbsoftwares/templates/bcbvideosoftwares.html
+++ b/bcbsoftwares/templates/bcbvideosoftwares.html
@@ -17,8 +17,8 @@
     <nav class="flex mx-auto h-20 items-center justify-between bg-white">
       <ul class="flex justify-evenly w-1/3">
         <li>
-          <a href="#"
-            ><img class="h-24 w-24 object-contain " src="{{dynamic.bcb_video_software_logo}}" alt="" srcset=""></svg
+          <a href="{{dynamic.bcb_video_software_logo_link}}"
+            ><img class="h-24 w-24 object-contain "  src="{{dynamic.bcb_video_software_logo}}" alt="" srcset=""></svg
           ></a>
         </li>
         <!-- <li class="font-semibold">Why Vimeo?</li>
