static file fixing

--- a/bcbsoftwares/templates/bcbwebsitebuildersoftware.html
+++ b/bcbsoftwares/templates/bcbwebsitebuildersoftware.html
@@ -37,7 +37,7 @@
           ">
         Create Your Website
       </a>
-      <div><img src="{% static 'assets/img/dios-l.webp' %}" alt="" /></div>
+      <div><img src="{% static 'assets/img/weebly.webp' %}" alt="" /></div>
     </div>
   </main>
 </body>
