static files update

--- a/banking/templates/banking/contact.html
+++ b/banking/templates/banking/contact.html
@@ -1,37 +1,37 @@
 <!doctype html>
 <html lang="zxx">
-    <head>
+    <head>{% load static %}
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS --> 
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/bootstrap.min.css' %}">
         <!-- Animate CSS --> 
-        <link rel="stylesheet" href="assets/css/animate.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/animate.min.css' %}">
         <!-- Meanmenu CSS -->
-        <link rel="stylesheet" href="assets/css/meanmenu.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/meanmenu.css' %}">
         <!-- Boxicons CSS -->
-        <link rel="stylesheet" href="assets/css/boxicons.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/boxicons.min.css' %}">
         <!-- Flaticon CSS -->
-        <link rel="stylesheet" href="assets/css/flaticon.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/flaticon.css' %}">
         <!-- Nice Select CSS -->
-        <link rel="stylesheet" href="assets/css/nice-select.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/nice-select.min.css' %}">
         <!-- Owl Carousel CSS -->
-        <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/owl.carousel.min.css' %}">
         <!-- Owl Carousel Default CSS -->
-        <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/owl.theme.default.min.css' %}">
         <!-- Odometer CSS -->
-        <link rel="stylesheet" href="assets/css/odometer.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/odometer.min.css' %}">
         <!-- Magnific Popup CSS -->
-        <link rel="stylesheet" href="assets/css/magnific-popup.min.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/magnific-popup.min.css' %}">
         <!-- Style CSS -->
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="{% static 'banking/assets/css/style.css' %}">
         <!-- Responsive CSS -->
-		<link rel="stylesheet" href="assets/css/responsive.css">
+		<link rel="stylesheet" href="{% static 'banking/assets/css/responsive.css' %}">
 		
 		<title>Leve - Online Banking & Payment Processing HTML Template</title>
 
-        <link rel="icon" type="image/png" href="assets/img/favicon.png">
+        <link rel="icon" type="image/png" href="{% static 'banking/assets/img/favicon.png' %}">
     </head>
 
     <body>
@@ -98,7 +98,7 @@
                     <div class="main-responsive-menu">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="assets/img/logo-1.png" alt="image">
+                                <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                             </a>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo-1.png" alt="image">
+                            <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                         </a>
 
                         <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -675,32 +675,32 @@
         <!-- End Go Top Area -->
         
         <!-- Jquery Slim JS -->
-        <script src="assets/js/jquery.min.js"></script>
+        <script src="{% static 'banking/assets/js/jquery.min.js' %}"></script>
         <!-- Popper JS -->
-        <script src="assets/js/popper.min.js"></script>
+        <script src="{% static 'banking/assets/js/popper.min.js' %}"></script>
         <!-- Bootstrap JS -->
-        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="{% static 'banking/assets/js/bootstrap.min.js' %}"></script>
         <!-- Meanmenu JS -->
-        <script src="assets/js/jquery.meanmenu.js"></script>
+        <script src="{% static 'banking/assets/js/jquery.meanmenu.js' %}"></script>
         <!-- Nice Select JS -->
-        <script src="assets/js/jquery.nice-select.min.js"></script>
+        <script src="{% static 'banking/assets/js/jquery.nice-select.min.js' %}"></script>
         <!-- Owl Carousel JS -->
-        <script src="assets/js/owl.carousel.min.js"></script>
+        <script src="{% static 'banking/assets/js/owl.carousel.min.js' %}"></script>
         <!-- Magnific Popup JS -->
-        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+        <script src="{% static 'banking/assets/js/jquery.magnific-popup.min.js' %}"></script>
         <!-- Odometer JS -->
-        <script src="assets/js/odometer.min.js"></script>
+        <script src="{% static 'banking/assets/js/odometer.min.js' %}"></script>
         <!-- Jquery Appear JS -->
-        <script src="assets/js/jquery.appear.min.js"></script>
+        <script src="{% static 'banking/assets/js/jquery.appear.min.js' %}"></script>
         <!-- Ajaxchimp JS -->
-		<script src="assets/js/jquery.ajaxchimp.min.js"></script>
+		<script src="{% static 'banking/assets/js/jquery.ajaxchimp.min.js' %}"></script>
 		<!-- Form Validator JS -->
-		<script src="assets/js/form-validator.min.js"></script>
+		<script src="{% static 'banking/assets/js/form-validator.min.js' %}"></script>
 		<!-- Contact JS -->
-        <script src="assets/js/contact-form-script.js"></script>
+        <script src="{% static 'banking/assets/js/contact-form-script.js' %}"></script>
         <!-- Wow JS -->
-        <script src="assets/js/wow.min.js"></script>
+        <script src="{% static 'banking/assets/js/wow.min.js' %}"></script>
         <!-- Custom JS -->
-        <script src="assets/js/main.js"></script>
+        <script src="{% static 'banking/assets/js/main.js' %}"></script>
     </body>
 </html>
