--- a/banking/templates/banking/contact.html
+++ b/banking/templates/banking/contact.html
@@ -62,14 +62,12 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="col-lg-6">
                         <ul class="top-header-others">
                             <li>
                                 <i class='bx bxs-map'></i>
                                 <a href="atm-and-bank-locations.html">ATMs location</a>
                             </li>
-
                             <li class="languages-list">
                                 <select>
                                     <option value="1">English</option>
@@ -79,7 +77,6 @@
                                     <option value="3">简体中文</option>
                                 </select>
                             </li>
-
                             <li>
                                 <i class='bx bx-user'></i>
                                 <a href="my-account.html">Sign In</a>
@@ -90,14 +87,13 @@
             </div>
         </div>
         <!-- End Top Header Area -->
-
         <!-- Start Navbar Area -->
         <div class="navbar-area">
             <div class="main-responsive-nav">
                 <div class="container">
                     <div class="main-responsive-menu">
                         <div class="logo">
-                            <a href="index.html">
+                            <a href="{% url 'banking_home' %}">
                                 <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                             </a>
                         </div>
@@ -108,7 +104,7 @@
             <div class="main-navbar">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="{% url 'banking_home' %}">
                             <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                         </a>
 
@@ -121,31 +117,31 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="index.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home One
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="index-2.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home Two
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="index-3.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home Three
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="index-4.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home Four
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="index-5.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home Five
                                             </a>
                                         </li>
@@ -166,7 +162,7 @@
 
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="about.html" class="nav-link">
+                                            <a href="{% url 'banking_about' %}" class="nav-link">
                                                 About
                                             </a>
                                         </li>
@@ -178,7 +174,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="pricing.html" class="nav-link">
+                                            <a href="{% url 'banking_pricing' %}" class="nav-link">
                                                 Pricing
                                             </a>
                                         </li>
@@ -247,7 +243,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="faq.html" class="nav-link">
+                                            <a href="{% url 'banking_faq' %}" class="nav-link">
                                                 FAQ
                                             </a>
                                         </li>
@@ -259,13 +255,13 @@
                                         </li>
                                 
                                         <li class="nav-item">
-                                            <a href="terms-of-service.html" class="nav-link">
+                                            <a href="{% url 'banking_terms-of-service' %}" class="nav-link">
                                                 Terms of Service
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="privacy-policy.html" class="nav-link">
+                                            <a href="{% url 'banking_privacy-policy' %}" class="nav-link">
                                                 Privacy Policy
                                             </a>
                                         </li>
@@ -280,7 +276,7 @@
 
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="services.html" class="nav-link">
+                                            <a href="{% url 'banking_services' %}" class="nav-link">
                                                 Services
                                             </a>
                                         </li>
@@ -332,7 +328,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a href="contact.html" class="nav-link active">
+                                    <a href="{% url 'banking_contact' %}" class="nav-link active">
                                         Contact
                                     </a>
                                 </li>
@@ -393,7 +389,7 @@
                     <h2>Contact</h2>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{% url 'banking_home' %}">Home</a>
                         </li>
                         <li>Contact</li>
                     </ul>
@@ -507,7 +503,7 @@
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input" id="checkme">
                                     <label class="form-check-label" for="checkme">
-                                        Accept <a href="terms-of-service.html">Terms of Services</a> and <a href="privacy-policy.html">Privacy Policy.</a>
+                                        Accept <a href="{% url 'banking_terms-of-service' %}">Terms of Services</a> and <a href="{% url 'banking_privacy-policy' %}">Privacy Policy.</a>
                                     </label>
                                 </div>
                             </div>
@@ -537,7 +533,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
                             <div class="footer-logo">
-                                <h2><a href="index.html">Leve</a></h2>
+                                <h2><a href="{% url 'banking_home' %}">Leve</a></h2>
 
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.</p>
 
