--- a/banking/templates/banking/pricing.html
+++ b/banking/templates/banking/pricing.html
@@ -97,7 +97,7 @@
                 <div class="container">
                     <div class="main-responsive-menu">
                         <div class="logo">
-                            <a href="index.html">
+                            <a href="{% url 'banking_home' %}">
                                 <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                             </a>
                         </div>
@@ -108,7 +108,7 @@
             <div class="main-navbar">
                 <div class="container">
                     <nav class="navbar navbar-expand-md navbar-light">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="{% url 'banking_home' %}">
                             <img src="{% static 'banking/assets/img/logo-1.png' %}" alt="image">
                         </a>
 
@@ -121,7 +121,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="index.html" class="nav-link">
+                                            <a href="{% url 'banking_home' %}" class="nav-link">
                                                 Home One
                                             </a>
                                         </li>
@@ -166,7 +166,7 @@
 
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="about.html" class="nav-link">
+                                            <a href="{% url 'banking_about' %}" class="nav-link">
                                                 About
                                             </a>
                                         </li>
@@ -178,7 +178,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="pricing.html" class="nav-link active">
+                                            <a href="{% url 'banking_pricing' %}" class="nav-link active">
                                                 Pricing
                                             </a>
                                         </li>
@@ -247,7 +247,7 @@
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="faq.html" class="nav-link">
+                                            <a href="{% url 'banking_faq' %}" class="nav-link">
                                                 FAQ
                                             </a>
                                         </li>
@@ -259,13 +259,13 @@
                                         </li>
                                 
                                         <li class="nav-item">
-                                            <a href="terms-of-service.html" class="nav-link">
+                                            <a href="{% url 'banking_terms-of-service' %}" class="nav-link">
                                                 Terms of Service
                                             </a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a href="privacy-policy.html" class="nav-link">
+                                            <a href="{% url 'banking_privacy-policy' %}" class="nav-link">
                                                 Privacy Policy
                                             </a>
                                         </li>
@@ -280,7 +280,7 @@
 
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a href="services.html" class="nav-link">
+                                            <a href="{% url 'banking_services' %}" class="nav-link">
                                                 Services
                                             </a>
                                         </li>
@@ -332,7 +332,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a href="contact.html" class="nav-link">
+                                    <a href="{% url 'banking_contact' %}" class="nav-link">
                                         Contact
                                     </a>
                                 </li>
@@ -393,7 +393,7 @@
                     <h2>Pricing</h2>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{% url 'banking_home' %}">Home</a>
                         </li>
                         <li>Pricing</li>
                     </ul>
@@ -652,7 +652,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
                             <div class="footer-logo">
-                                <h2><a href="index.html">Leve</a></h2>
+                                <h2><a href="{% url 'banking_home' %}">Leve</a></h2>
 
                                 <p>Lorem ipsum dolor sit amet, consec tetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua.</p>
 
